--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
-body{
+html{
+	height:100%;
+ 	min-height:100%;
 	background: img src("theOwl.jpg") 
 	no-repeat center center fixed;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
+
+body{
+ min-height:100%;
+ }
 
 .holla {
 	position: absolute;
