--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 html{
 	height:100%;
  	min-height:100%;
-	background: url(https://images.unsplash.com/photo-1517354690409-ff59e0aa4558?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c012499bce88d623c33bbc9ba3bdf161&auto=format&fit=crop&w=750&q=80) 
-	no-repeat center center fixed;
+	background-image: url(https://images.unsplash.com/photo-1517354690409-ff59e0aa4558?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c012499bce88d623c33bbc9ba3bdf161&auto=format&fit=crop&w=750&q=80); 
+	background-repeat:no-repeat;
+	background-position: center center;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
