--- a/Compair/style.css
+++ b/Compair/style.css
@@ -11,7 +11,7 @@ body {
 #c1 {
 	margin-left: 5px;
 	border: solid 0px;
-	width: 960px;
+	width: 80%;
 	height: 400px;
 	margin: 10px;
 	background-color: rgba(57, 182, 255, 1);
@@ -20,7 +20,7 @@ body {
 
 #c2 {
 	border: solid 0px;
-	width: 960px;
+	width: 80%;
 	height: 275px;
 	margin: 10px;
 }
@@ -28,7 +28,7 @@ body {
 #c3 {
 	margin-left: 5px;
 	border: solid 0px;
-	width: 960px;
+	width: 80%;
 	height: 400px;
 	margin: 10px;
 	background-color: rgba(255, 130, 57, 1);
