--- a/Compair/style.css
+++ b/Compair/style.css
@@ -42,6 +42,7 @@ input {
 	font-size: 50px;
 	text-align: center;
 	border-radius: 15px;
+	width: 60%;
 }
 
 .flexwrap {
@@ -86,8 +87,8 @@ li {
 
 
 #canvas {
-	width: 95%;
-	background-color: black;
+	width: 80%;
+	background-color: white;;
 }
 
 .smtext {
