--- a/Compair/style.css
+++ b/Compair/style.css
@@ -8,6 +8,12 @@ body {
 	font-size: 60px;
 }
 
+@media (max-width: 800px) {
+	body {
+		background-color: green;
+	}
+}
+
 .header {
 	font-size: 85px;
 }
