--- a/codingchallenge14/style.css
+++ b/codingchallenge14/style.css
@@ -1,6 +1,7 @@
 body {
 	background-image: linear-gradient(to right, #06beb6, #48b1bf);
 	font-family: "Verdana", sans-serif;
+	font-size: 1.5rem;
 }
 
 #playmat {
@@ -27,8 +28,10 @@ body {
 }
 
 .card {
-	width: 90%;
-	height: 100%;
+	/*width: 90%;
+	height: 100%;*/
+	width: 15vw;
+	height: 25vh;
 	position: relative;
 	transition: transform 1s;
 	transform-style: preserve-3d;
@@ -62,6 +65,11 @@ body {
 
 .card.stay-flipped {
 	transform: rotateY(180deg);
+}
+
+img{
+	height: 2rem;
+	width: 2rem;
 }
 
 img:hover {
