cleaned code & added reset icon

--- a/codingchallenge14/style.css
+++ b/codingchallenge14/style.css
@@ -118,9 +118,9 @@ img:hover {
 	background-position: 50% 50%;
 }
 
-.image100 {}
+/*.image100 {}
 .image200 {}
 .image300 {}
 .image400 {}
 .image500 {}
-.image600 {}
+.image600 {}*/
