--- a/Compair/style.css
+++ b/Compair/style.css
@@ -1,3 +1,7 @@
+html {
+	font-size: 10px;
+}
+
 body {
 	display: flex;
 	flex-wrap: wrap;
@@ -5,10 +9,10 @@ body {
 	align-items: center;
 	text-align: center;
 	font-family: 'Saira', sans-serif;
-	font-size: 60px;
+	/*font-size: 1rem;*/
 }
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
 	body {
 		font-size: 30px;
 	}
@@ -18,13 +22,23 @@ body {
 	body {
 		font-size: 30px;
 	}
-}
+}*/
 
 .header {
-	font-size: 85px;
+	
 }
 
-@media (max-width: 800px) {
+.Comp {
+	color: rgba(57, 182, 255, 1);
+	font-size: 4.2rem;
+}
+
+.air {
+	color: rgba(255, 130, 57, 1);
+	font-size: 4.2rem;
+}
+
+/*@media (max-width: 800px) {
 	.header {
 		font-size: 42px;
 	}
@@ -34,18 +48,18 @@ body {
 	.header {
 		font-size: 42px;
 	}
-}
+}*/
 
 #optionList {
 	font-family: 'Saira', sans-serif;
 	position: absolute;
-    top: 60px;
+    top: 3rem;
     right: 13%;
-    border-radius: 15px;
-    font-size: 25px;
+    border-radius: 1.5rem;
+    font-size: 1.3rem;
 }
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
 	#optionList {
 		font-family: 'Saira', sans-serif;
 		position: absolute;
@@ -65,19 +79,19 @@ body {
 	    border-radius: 15px;
 	    font-size: 15px;
 	}
-}
+}*/
 
 #c1 {
-	margin-left: 5px;
-	border: solid 0px;
+	margin-left: .5rem;
+	border: solid 0rem;
 	width: 80%;
-	height: 390px;
-	margin: 10px;
+	height: 18.5rem;
+	margin-top: 1rem;
 	background-color: rgba(57, 182, 255, 1);
-	border-radius: 30px;
+	border-radius: 3rem;
 }
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
 	#c1 {
 		margin-left: 5px;
 		border: solid 0px;
@@ -99,15 +113,16 @@ body {
 		background-color: rgba(57, 182, 255, 1);
 		border-radius: 30px;
 	}
-}
+}*/
 
 #c2 {
+	margin-left: .5rem
 	border: solid 0px;
 	width: 80%;
-	height: 240px;
-	margin: 10px;
+	height: 15.75rem;
+	margin: 0rem;
 }
-
+/*
 @media (max-width: 800px) {
 	#c2 {
 		border: solid 0px;
@@ -124,19 +139,19 @@ body {
 		height: 120px;
 		margin: 5px;
 	}
-}
+}*/
 
 #c3 {
-	margin-left: 5px;
-	border: solid 0px;
+	margin-left: .5rem;
+	border: solid 0rem;
 	width: 80%;
-	height: 390px;
-	margin: 10px;
+	height: 18.5rem;
+	margin: 0rem;
 	background-color: rgba(255, 130, 57, 1);
-	border-radius: 30px;
+	border-radius: 3rem;
 }
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
 	#c3 {
 		margin-left: 5px;
 		border: solid 0px;
@@ -158,19 +173,20 @@ body {
 		background-color: rgba(255, 130, 57, 1);
 		border-radius: 30px;
 	}
-}
+}*/
 
 input {
-	border: 0px 1px 1px 0px;
-	margin-bottom: 30px;
+	border: 0rem .1rem .1rem 0rem;
+	margin-top: .5rem;
+	height: 4rem;
 	font-family: 'Saira', sans-serif;
-	font-size: 50px;
+	font-size: 2.5rem;
 	text-align: center;
-	border-radius: 15px;
-	width: 60%;
+	border-radius: 1.5rem;
+	width: 55%;
 }
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
 	input {
 		border: 0px 1px 1px 0px;
 		margin-bottom: 15px;
@@ -192,61 +208,42 @@ input {
 		border-radius: 15px;
 		width: 60%;
 	}
-}
+}*/
 
 .flexwrap {
+	margin-top: 3rem;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
 
-ul {
-	list-style-type: none;
-	text-align: center;
-}
-
-li {
-	display: inline-block;
-	margin: 0px 10px 0px 10px;
-}
-
-@media (max-width: 800px) {
-	li {
-		display: inline-block;
-		margin: 0px 5px 0px 5px;
-	}
-}
-
-@media (min-width: 1200px) {
-	li {
-		display: inline-block;
-		margin: 0px 5px 0px 5px;
-	}
+.c2flexwrap {
+	margin-top: 5rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
 }
 
 .blue {
 	color: rgba(57, 182, 255, 1);
+	font-size: 3rem;
 }
 
 .orange {
 	color: rgba(255, 130, 57, 1);
+	font-size: 3rem;
 }
 
 .black {
 	color: rgba(0, 0, 0, 1);
-}
-
-
-#canvas {
-	width: 80%;
-	background-color: white;
+	font-size: 3rem;
 }
 
 .smtext {
-	font-size: 35px;
+	font-size: 1.75rem;
 }
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
 	.smtext {
 		font-size: 17px;
 	}
@@ -256,13 +253,13 @@ li {
 	.smtext {
 		font-size: 17px;
 	}
-}
+}*/
 
 .bgtext {
-	font-size: 60px;
+	font-size: 3rem;
 }
 
-@media (max-width: 800px) {
+/*@media (max-width: 800px) {
 	.bgtext {
 		font-size: 30px;
 	}
@@ -286,4 +283,14 @@ li {
 		width: 100px;
 		height: 100px;
 	}
+}*/
+
+img {
+	height: 6rem;
+	width: 6rem;
+}
+
+.iconRoom {
+	/*height: 6rem;
+	width: 6rem;*/
 }
