--- a/Compair/style.css
+++ b/Compair/style.css
@@ -1,5 +1,17 @@
 html {
-	font-size: 10px;
+	font-size: 20px;
+}
+
+@media (max-width: 800px){
+	html {
+		font-size: 10px;
+	}
+}
+
+@media (min-width: 1200px){
+	html {
+		font-size: 10px;
+	}
 }
 
 body {
@@ -9,20 +21,7 @@ body {
 	align-items: center;
 	text-align: center;
 	font-family: 'Saira', sans-serif;
-	/*font-size: 1rem;*/
 }
-
-/*@media (max-width: 800px) {
-	body {
-		font-size: 30px;
-	}
-}
-
-@media (min-width: 1200px) {
-	body {
-		font-size: 30px;
-	}
-}*/
 
 .header {
 	
@@ -38,18 +37,6 @@ body {
 	font-size: 4.2rem;
 }
 
-/*@media (max-width: 800px) {
-	.header {
-		font-size: 42px;
-	}
-}
-
-@media (min-width: 1200px) {
-	.header {
-		font-size: 42px;
-	}
-}*/
-
 #optionList {
 	font-family: 'Saira', sans-serif;
 	position: absolute;
@@ -58,28 +45,6 @@ body {
     border-radius: 1.5rem;
     font-size: 1.3rem;
 }
-
-/*@media (max-width: 800px) {
-	#optionList {
-		font-family: 'Saira', sans-serif;
-		position: absolute;
-	    top: 30px;
-	    right: 15%;
-	    border-radius: 15px;
-	    font-size: 15px;
-	}
-}
-
-@media (min-width: 1200px) {
-	#optionList {
-		font-family: 'Saira', sans-serif;
-		position: absolute;
-	    top: 30px;
-	    right: 15%;
-	    border-radius: 15px;
-	    font-size: 15px;
-	}
-}*/
 
 #c1 {
 	margin-left: .5rem;
@@ -91,30 +56,6 @@ body {
 	border-radius: 3rem;
 }
 
-/*@media (max-width: 800px) {
-	#c1 {
-		margin-left: 5px;
-		border: solid 0px;
-		width: 80%;
-		height: 190px;
-		margin: 10px;
-		background-color: rgba(57, 182, 255, 1);
-		border-radius: 30px;
-	}
-}
-
-@media (min-width: 1200px) {
-	#c1 {
-		margin-left: 5px;
-		border: solid 0px;
-		width: 80%;
-		height: 190px;
-		margin: 10px;
-		background-color: rgba(57, 182, 255, 1);
-		border-radius: 30px;
-	}
-}*/
-
 #c2 {
 	margin-left: .5rem
 	border: solid 0px;
@@ -122,24 +63,6 @@ body {
 	height: 15.75rem;
 	margin: 0rem;
 }
-/*
-@media (max-width: 800px) {
-	#c2 {
-		border: solid 0px;
-		width: 80%;
-		height: 120px;
-		margin: 5px;
-	}
-}
-
-@media (min-width: 1200px) {
-	#c2 {
-		border: solid 0px;
-		width: 80%;
-		height: 120px;
-		margin: 5px;
-	}
-}*/
 
 #c3 {
 	margin-left: .5rem;
@@ -151,30 +74,6 @@ body {
 	border-radius: 3rem;
 }
 
-/*@media (max-width: 800px) {
-	#c3 {
-		margin-left: 5px;
-		border: solid 0px;
-		width: 80%;
-		height: 190px;
-		margin: 5px;
-		background-color: rgba(255, 130, 57, 1);
-		border-radius: 30px;
-	}
-}
-
-@media (min-width: 1200px) {
-	#c3 {
-		margin-left: 5px;
-		border: solid 0px;
-		width: 80%;
-		height: 190px;
-		margin: 5px;
-		background-color: rgba(255, 130, 57, 1);
-		border-radius: 30px;
-	}
-}*/
-
 input {
 	border: 0rem .1rem .1rem 0rem;
 	margin-top: .5rem;
@@ -185,30 +84,6 @@ input {
 	border-radius: 1.5rem;
 	width: 55%;
 }
-
-/*@media (max-width: 800px) {
-	input {
-		border: 0px 1px 1px 0px;
-		margin-bottom: 15px;
-		font-family: 'Saira', sans-serif;
-		font-size: 25px;
-		text-align: center;
-		border-radius: 15px;
-		width: 60%;
-	}
-}
-
-@media (min-width: 1200px) {
-	input {
-		border: 0px 1px 1px 0px;
-		margin-bottom: 15px;
-		font-family: 'Saira', sans-serif;
-		font-size: 25px;
-		text-align: center;
-		border-radius: 15px;
-		width: 60%;
-	}
-}*/
 
 .flexwrap {
 	margin-top: 3rem;
@@ -243,47 +118,9 @@ input {
 	font-size: 1.75rem;
 }
 
-/*@media (max-width: 800px) {
-	.smtext {
-		font-size: 17px;
-	}
-}
-
-@media (min-width: 1200px) {
-	.smtext {
-		font-size: 17px;
-	}
-}*/
-
 .bgtext {
 	font-size: 3rem;
 }
-
-/*@media (max-width: 800px) {
-	.bgtext {
-		font-size: 30px;
-	}
-}
-
-@media (min-width: 1200px) {
-	.bgtext {
-		font-size: 30px;
-	}
-}
-
-@media (max-width: 800px) {
-	img {
-		width: 100px;
-		height: 100px;
-	}
-}
-
-@media (min-width: 1200px) {
-	img {
-		width: 100px;
-		height: 100px;
-	}
-}*/
 
 img {
 	height: 7rem;
@@ -291,6 +128,5 @@ img {
 }
 
 .iconRoom {
-	/*height: 6rem;
-	width: 6rem;*/
+	
 }
