--- a/mmapp/src/containers/App.css
+++ b/mmapp/src/containers/App.css
@@ -10,6 +10,10 @@ body{
 	font-size: 1.75rem;
 }
 
+.shadow {
+	box-shadow: 3px 5px 5px #888888;
+}
+
 .sticky {
 /*	position: sticky;
 	position: -webkit-sticky;
