--- a/mmapp/src/containers/App.css
+++ b/mmapp/src/containers/App.css
@@ -14,6 +14,12 @@ body{
 	box-shadow: 3px 5px 5px #888888;
 }
 
+.flexVC {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
 .sticky {
 /*	position: sticky;
 	position: -webkit-sticky;
