--- a/mmapp/src/components/SquareCard.css
+++ b/mmapp/src/components/SquareCard.css
@@ -1,24 +1,31 @@
 .container {
-  margin: 0;
+/*  margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);*/
+  /*align-items: center;*/
+  background-color: transparent;
 }
 
 img{
-	border-radius: 4px;
+	border-radius: .4rem;
   /*margin-top: auto;*/
 }
 
 ul {
+  border-radius: .4rem;
   list-style-type: none;
   text-align: left;
   background-color: white;
   padding: 1rem;
-  width: 300px;
+  width: 32.5rem;
   vertical-align: center;
+}
+
+.shadow {
+  box-shadow: 3px 5px 5px #888888;
 }
 
 .ital {
