updating portfolio with metmmapp

--- a/mmapp/src/containers/App.css
+++ b/mmapp/src/containers/App.css
@@ -15,7 +15,7 @@ input {
 	padding: .5rem;
 	font-size: 1.5rem;
 	outline-style: none;
-	border: 0px;
+	border: 0rem;
 	font-family: 'Roboto', sans-serif;
 	width: 25rem;
 	text-align: center;
